# nlp-support-ticket-router

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/: .gitkeep  class_weight_strategy.json  eval_metrics.json  train_metrics.json
data/processed/: .gitkeep
data/synthetic/: .gitkeep
docs/: CHEATSHEET.md  PROJECT_PLAN.md  day6_errors.md  day6_summary.md  day7_errors.md  day7_summary.md  preprocessing.md  results.md
notebooks/: .gitkeep  01_eda.ipynb  02_preprocessing.ipynb  03_model_eval.ipynb
scripts/: build_nb02.py  build_nb03.py  download_data.py  evaluate.py  prepare_data.py  seed_edge_cases.py  strip_nb02_outputs.py  strip_nb03_outputs.py  train_category.py
src/ticket_router/: __init__.py  config.py  schemas.py
src/ticket_router/api/: main.py
src/ticket_router/api/routes/: classify.py  stats.py  tickets.py
src/ticket_router/db/: database.py  models.py  repository.py
src/ticket_router/models/: category_classifier.py  priority.py  sentiment.py
src/ticket_router/pipeline/: inference.py
src/ticket_router/preprocessing/: cleaner.py  dataset.py
src/ticket_router/routing/: router.py
tests/: conftest.py  test_api.py  test_category_classifier.py  test_cleaner.py  test_dataset.py  test_pipeline.py  test_priority.py  test_router.py  test_sentiment.py
